--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Balaji S</title>
   </head>
   <body>
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
