--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Balaji S</title>
+    <title>Balaji S | Developer</title>
   </head>
   <body>
     <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
